--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
  
  /* INDEX HTML PAGE */
  /* GLOBAL STYLE */
-
  *,
  *::before,
  *::after {
@@ -21,6 +20,8 @@
         --cornflower: #e7e9fc;
         --cloud: #f4f4fd;   
         --dairy: #fcfcfc;
+        --light-slate: #8E8F99;
+        
                 
 }
 
@@ -100,7 +101,6 @@ button {
         font-weight: 800;
         letter-spacing: 0.54px;
         color: var(--slate);  
-        
 }
 
 .logo-studio:hover,
@@ -118,11 +118,7 @@ button {
         color: var(--iris);
 }
 
-
-
-
 /* HEADER STYLE */
-
 .page-header {
         display: flex;
         background: var(--white, #fff);
@@ -200,7 +196,6 @@ button {
         top: 25px;
         bottom: 0;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 /* selected link */
@@ -229,7 +224,6 @@ button {
 /* visited link */
 .contacts-link:visited {
         color: var(--ocean);
-
 }
 
 /* mouse over link */
@@ -243,10 +237,7 @@ button {
         color: var(--ocean);
 }
 
-
-
 /* HERO BANNER */
-
 .hero-container {
         width: 100%;
         margin: 0 auto;
@@ -264,7 +255,6 @@ button {
         color: var(--white, #fff);
         text-align: center;
 }
-
 
 .hero h1  {
         margin-bottom: 58px;
@@ -307,8 +297,7 @@ button {
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
 
 .modal {
@@ -337,9 +326,7 @@ button {
        
         border-radius: 100%;
         display: block;
-        margin-left: auto;
-        
-        
+        margin-left: auto;  
 }
 
 .modal-close:hover,
@@ -350,6 +337,191 @@ button {
 
 .modal-close-icon {
         fill:currentColor;
+}
+
+/*modal form*/
+
+.form-header {
+        color: var(--navyblue, #2E2F42);
+        text-align: center;
+        font-weight: 500;
+        margin-top: 24px;
+        margin-bottom: 11px;
+}
+
+.form-label {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 11px;
+        width: 100%;  
+        position: relative;
+}
+
+.form-label-text {
+        text-align: left;
+        margin-bottom: 8px;
+        color: var(--light-slate);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+}
+
+.form-input {   
+        width: 360px;
+        height: 40px;
+        /* padding-top: 11px; */
+        /* padding-bottom: 11px; */
+        padding-left: 38px;
+        border-radius: 4px;
+
+        border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));   
+}
+
+.form-input:focus,
+.form-input:hover,
+.form-textarea:hover,
+.form-textarea:focus {
+        border: 1px solid var(--iris, #4D5AE5);
+}
+
+.form-svg {
+        position: absolute;
+        top: 55%;
+        left: 15px;
+        fill: var(--navyblue, #2E2F42);
+        transition-property: fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus +.form-svg,
+.form-input:hover +.form-svg {
+        fill: var(--iris);
+}
+
+.form-textarea {
+        width: 360px;
+        height: 120px;
+        padding-top: 8px;
+        padding-left: 16px;
+        border-radius: 4px;
+        font-size: 14px;
+        resize: none;
+}
+
+.form-textarea::placeholder {
+        color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+}
+
+.form-label-agree {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        /* flex-direction: column;
+        margin-bottom: 30px;
+        width: 100%;
+        position: relative; */
+}
+
+.form-input-checkbox {
+        width: 16px;
+        height: 16px;
+        position: relative;
+        left: 16px;
+        opacity: 0;
+}
+
+.form-check-svg {
+        fill: none;
+        margin-right: 8px;
+        border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+        border-radius: 2px;
+
+        transition: 250ms;
+        transition-property: border-color, background-color, fill;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;             
+}
+
+.form-label-agree .form-input-checkbox:focus + .form-check-svg,
+.form-label-agree .form-input-checkbox:checked:focus + .form-check-svg {
+        outline: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+}
+
+.form-label-agree .form-input-checkbox:checked + .form-check-svg {
+        background-color: var(--iris);
+        border-color: var(--iris);
+        fill: white;
+        outline: none;
+        stroke: white;
+        stroke-width: 0.2;
+}
+
+.form-check-svg:hover {
+        border: 1px solid var(--iris, #4D5AE5);
+}
+        
+.form-agree-text {
+        flex-shrink: 0;
+        color: var(--lightslate, #8E8F99);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+}
+
+.form-agree-link {
+        color: var(--iris, #4D5AE5);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+        letter-spacing: 0.48px;
+        text-decoration-line: underline;
+        transition-property: color, text-decoration-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-agree-link:hover,
+.form-agree-link:focus {
+        color: var(--ocean);
+        text-decoration-color: rgba(0, 0, 255, 0.0);
+}
+
+.form-button-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding: 16px 32px;
+}
+
+.form-button-send {
+        width: 169px;
+        height: 56px;
+        
+        border: none;
+        font-weight: 500;
+        letter-spacing: 0.64px;
+        border-radius: 4px;
+        background-color: var(--iris);
+        color: var(--white);
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        cursor: pointer;
+        transition-property: background-color, color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button-send:hover,
+.form-button-send:focus {
+        background-color: var(--ocean);
 }
 
 /* CORE VALUES, WHAT WE DOING, OUR TEAM, CLIENT*/
@@ -383,7 +555,6 @@ h2 {
         text-align: center;
         padding: 24px 0;
         background-color: var(--cloud);
-
 }
 
 .our-team-wrap {
@@ -391,8 +562,7 @@ h2 {
 }
 
 .our-team li {
-        background: white;
-        
+        background: white;    
 }
 
 .team-info {
@@ -402,7 +572,6 @@ h2 {
 
 .team-info h3 {
         margin-bottom: 13px;
-
 }
 
 .team-social-flex {
@@ -469,11 +638,9 @@ h2 {
 
 
 /* FOOTER STYLE */
-
 .footer-wrap {
         background-color: var(--navyblue);
 }
-
 
 .footer-content {
         display: flex;
@@ -483,7 +650,9 @@ h2 {
 }
 
 .footer-column {
-        width: calc(100%/3);
+        /* width: calc(100%/3); */
+        display: inline-block;
+        
 }
 
 .footer-content .logo-web {
@@ -493,8 +662,7 @@ h2 {
 .footer-column p {
         max-width: 265px; 
         width: 100%;
-        margin-bottom: 20px;
-         
+        margin-bottom: 20px;     
 } 
 
 .footer-social-flex {
@@ -521,8 +689,40 @@ h2 {
         background-color: #31d0aa;
 }
 
-
 .footer-social-svg {
+        fill: currentColor;
+}
+
+
+.footer-input-subscribe {
+        border: 2px solid white;
+        background: none;
+        border-radius: 4px;
+        padding: 10px;
+        width: 264px;
+        background-color: none;
+        
+}
+
+.footer-input-subscribe::placeholder {
+        color: var(--white);
+        font-size: 12px;
+        margin-left: 24px;
+}
+
+.footer-form-button {
+        display: inline-flex;
+        align-items: center;
+        padding: 8px 24px;
+
+        border-radius: 4px;
+        color: var(--white);
+        font-weight: 500;
+        background-color: var(--iris);
+        border-radius: 4px;
+}
+
+.footer-subscribe-svg {
         fill: currentColor;
 }
 
@@ -568,7 +768,6 @@ h2 {
         border-color: var(--ocean, #404bbf);
 }
 
-
 .portfolio-img {
         display: flex;
         flex-wrap: wrap;
@@ -592,7 +791,6 @@ h2 {
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-
 
 .project-cover-image {
         position: relative;
